--- a/src/pages/addproduct.css
+++ b/src/pages/addproduct.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+#product_form
+{
+  flex-wrap: nowrap;
+}
+
 .label
 {
 
@@ -13,35 +18,37 @@
 
 .typeSwitcher
 {
-  margin-top: 3rem;
+  width: 300px;
+  margin-top: 1rem;
 }
 
-.inputfieldSKU
+#sku
 { 
   position: relative;
-  right: 10px;
+  left: 5rem;
   background-color: rgb(191, 240, 247);
-  margin: 1rem 0px 10px 9rem;
+  margin-top: 10px;
   font-size: 23px;
   border: 1px solid;
   height: 25px;
 }
-.inputfieldName
+#name
 { 
   position: relative;
-  right: 2px;
+  left: 4rem;
   background-color: rgb(191, 240, 247);
-  margin: 1rem 0px 10px 7.45rem;
+  margin-top: 15px;
   font-size: 23px;
   border: 1px solid;
   height: 25px;
 }
-.inputfieldPrice
+#price
 { 
   position: relative;
   right: 4px;
+  left: 1.7rem;
   background-color: rgb(191, 240, 247);
-  margin: 1rem 0px 10px 5.20rem;
+  margin-top: 15px;
   font-size: 23px;
   border: 1px solid;
   height: 25px;
@@ -120,14 +127,12 @@
   border: 1px solid black;
 }
 
-.LBox
+#productType
 {
   position: relative;
-  bottom: 5px;
-  right: 15px;
+  margin-top: 3rem;
   text-align: center;
   font-size: 20px;
-  margin: -34px 0 0 350px;
   width:200px;
 }
 
@@ -138,13 +143,13 @@
   margin: 0 0 0 80px;
 }
 
-.inputDvd
+#size
 {
   bottom: 3px;
   position: relative;
   font-size : 23px;
   height: 25px;
-  margin : 0 0 20px 74px;
+  margin-top: 15px;
   background-color: rgb(191, 240, 247);
 }
 
@@ -160,24 +165,45 @@
   font-size: 20px;
   margin :30px 0 0 80px;
 }
-.inputbook
+#weight
 {
   position: relative;
   left: 8px;
   bottom: 3px;
   font-size : 23px;
   height: 25px;
-  margin : 0 0 20px 40px;
+  margin-top: 15px;
   background-color: rgb(191, 240, 247);
 }
 
-.inputfurn
+#height
 {
   position: relative;
   bottom: 3px;
   left: 10px;
   font-size : 23px;
   height: 25px;
-  margin : 20px 0 20px 40px;
+  margin-top: 10px;
+  background-color: rgb(191, 240, 247);
+}
+
+#width
+{
+  position: relative;
+  bottom: 3px;
+  left: 10px;
+  font-size : 23px;
+  height: 25px;
+  margin-top: 30px;
+  background-color: rgb(191, 240, 247);
+}
+
+#lenght
+{
+  position: relative;
+  font-size : 23px;
+  height: 25px;
+  margin-top: 30px;
+  margin-left: 10px;
   background-color: rgb(191, 240, 247);
 }
