--- a/src/pages/addproduct.css
+++ b/src/pages/addproduct.css
@@ -131,6 +131,7 @@
 {
   position: relative;
   margin-top: 3rem;
+  margin-left: 2rem;
   text-align: center;
   font-size: 20px;
   width:200px;
@@ -150,6 +151,7 @@
   font-size : 23px;
   height: 25px;
   margin-top: 15px;
+  margin-left: 2rem;
   background-color: rgb(191, 240, 247);
 }
 
@@ -195,6 +197,7 @@
   font-size : 23px;
   height: 25px;
   margin-top: 30px;
+  margin-left: 4px;
   background-color: rgb(191, 240, 247);
 }
 
